Fix spacing for tiles and tiles container

--- a/src/Components/GameBoard/GameBoard.css
+++ b/src/Components/GameBoard/GameBoard.css
@@ -6,9 +6,9 @@
 }
 
 .tiles {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  width: 100%;
+  display: flex;
+  width: 100vw;
+  justify-content: space-around;
 }
 
 @media screen and (max-width: 1350px) {
